@startuml

hide empty members

class Aggregation {
    + int total
    + void calculate()
}

class BinaryExpression {
    + int left
    + int right
    + int calculate()
}

abstract class BinaryOperator {
    + char symbol
    + int calculate(int x, int y)
}

class Addition {
}

class Subtraction {
}

Aggregation "1" *-- "*" BinaryExpression : expressions
Aggregation *-- BinaryOperator : aggregateOperator

BinaryExpression *- BinaryOperator : operator
Addition -up-|> BinaryOperator
Subtraction -up-|> BinaryOperator

@enduml